--- a/codigos/useful-code.ipynb
+++ b/codigos/useful-code.ipynb
@@ -8,8 +8,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on material find at:\n",
+    "- http://cs231n.github.io/python-numpy-tutorial/#numpy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +138,7 @@
       " [0. 0. 0. 0. 1.]]\n",
       "\n",
       "random => \n",
-      "[[0.80585175 0.79909639 0.4330635  0.02012077 0.97511953 0.93810794]]\n",
+      "[[0.74553834 0.97994452 0.65770489 0.61716748 0.58634569 0.79708631]]\n",
       "\n"
      ]
     }
@@ -156,12 +164,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Slicing"
+    "## Slicing / Indexing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,6 +202,356 @@
     "\n",
     "print(row_r1)\n",
     "print(row_r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a => \n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "\n",
+      "a[[0, 1, 2], [0, 1, 0]] == np.array([a[0, 0], a[1, 1], a[2, 0]]) => \n",
+      "[1 4 5]\n",
+      "\n",
+      "[5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1,2], [3, 4], [5, 6]])\n",
+    "\n",
+    "print(\"a => \\n%s\\n\" % a)\n",
+    "print(\"a[[0, 1, 2], [0, 1, 0]] == np.array([a[0, 0], a[1, 1], a[2, 0]]) => \\n%s\\n\" % a[[0, 1, 2], [0, 1, 0]])\n",
+    "\n",
+    "# select the fields a[2,0] and a[2,1]\n",
+    "print(a[[2,2],[0,1]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trick with array indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b => \n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n",
+      "\n",
+      "[ 1  6  7 11]\n",
+      "\n",
+      "b modified => \n",
+      "[[11  2  3]\n",
+      " [ 4  5 16]\n",
+      " [17  8  9]\n",
+      " [10 21 12]]\n",
+      "\n",
+      "\n",
+      " Comparing b>10 =>\n",
+      "[11 16 17 21 12]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.array([[1,2,3], [4,5,6], [7,8,9], [10, 11, 12]])\n",
+    "\n",
+    "print(\"b => \\n%s\\n\" % b)\n",
+    "\n",
+    "# Create an array of indices\n",
+    "index = np.array([0, 2, 0, 1])\n",
+    "\n",
+    "print(b[np.arange(len(index)), index])\n",
+    "\n",
+    "b[np.arange(len(index)), index] += 10\n",
+    "\n",
+    "print(\"\\nb modified => \\n%s\\n\" % b)\n",
+    "\n",
+    "print(\"\\n Comparing b>10 =>\\n%s\\n\" % b[b>10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Elementwise operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x => \n",
+      "[[1. 2.]\n",
+      " [3. 4.]]\n",
+      "\n",
+      " y => \n",
+      "[[5. 6.]\n",
+      " [7. 8.]]\n",
+      "\n",
+      "x + y = \n",
+      "[[ 6.  8.]\n",
+      " [10. 12.]]\n",
+      "\n",
+      "x - y = \n",
+      "[[-4. -4.]\n",
+      " [-4. -4.]]\n",
+      "\n",
+      "x * y = \n",
+      "[[ 5. 12.]\n",
+      " [21. 32.]]\n",
+      "\n",
+      "x / y = \n",
+      "[[0.2        0.33333333]\n",
+      " [0.42857143 0.5       ]]\n",
+      "\n",
+      "x^-2 = \n",
+      "[[1.         1.41421356]\n",
+      " [1.73205081 2.        ]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2],[3,4]], dtype=np.float64)\n",
+    "y = np.array([[5,6],[7,8]], dtype=np.float64)\n",
+    "\n",
+    "print(\"x => \\n%s\\n\\n y => \\n%s\\n\" % (x,y))\n",
+    "\n",
+    "# Sum\n",
+    "print(\"x + y = \\n%s\\n\" % (x + y))\n",
+    "\n",
+    "# Difference\n",
+    "print(\"x - y = \\n%s\\n\" % (x - y))\n",
+    "\n",
+    "# Multiplication\n",
+    "print(\"x * y = \\n%s\\n\" % (x * y))\n",
+    "\n",
+    "# Division\n",
+    "print(\"x / y = \\n%s\\n\" % (x / y))\n",
+    "\n",
+    "# Square root\n",
+    "print(\"x^-2 = \\n%s\\n\" % (np.sqrt(x)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrix multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =>\n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "\n",
+      "y =>\n",
+      "[[5 6]\n",
+      " [7 8]]\n",
+      "\n",
+      "v =>\n",
+      "[1 0]\n",
+      "\n",
+      "w =>\n",
+      "[0 1]\n",
+      "\n",
+      "<v,w> = 0\n",
+      "\n",
+      "x v = \n",
+      "[1 3]\n",
+      "\n",
+      "v^T x =\n",
+      "[1 2]\n",
+      "\n",
+      "[1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2],[3,4]])\n",
+    "y = np.array([[5,6],[7,8]])\n",
+    "\n",
+    "v = np.array([1,0])\n",
+    "w = np.array([0, 1])\n",
+    "\n",
+    "print(\"x =>\\n%s\\n\" % x)\n",
+    "print(\"y =>\\n%s\\n\" % y)\n",
+    "print(\"v =>\\n%s\\n\" % v)\n",
+    "print(\"w =>\\n%s\\n\" % w)\n",
+    "\n",
+    "# Inner product of vectors\n",
+    "print(\"<v,w> = %s\\n\" % v.dot(w))\n",
+    "# print(np.dot(v, w))\n",
+    "\n",
+    "# Matrix / vector product\n",
+    "print(\"x v = \\n%s\\n\" % x.dot(v))\n",
+    "# print(np.dot(x, v))\n",
+    "\n",
+    "print(\"v^T x =\\n%s\\n\" % v.dot(x))\n",
+    "\n",
+    "print(v@x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of all elements: \n",
+      "21\n",
+      "\n",
+      "Sum of elements of each column: \n",
+      "[5 7 9]\n",
+      "\n",
+      "Sum of elements of each row: \n",
+      "[ 6 15]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "# Sum of all elements\n",
+    "print(\"Sum of all elements: \\n%s\\n\" % np.sum(x))\n",
+    "\n",
+    "# Sum of elements of each column\n",
+    "print(\"Sum of elements of each column: \\n%s\\n\" % np.sum(x, axis=0))\n",
+    "\n",
+    "# Sum of elements of each row\n",
+    "print(\"Sum of elements of each row: \\n%s\\n\" % np.sum(x, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Broadcasting\n",
+    "\n",
+    "Suppose that we need to sum v at each row of x, we can do this iterating over x (this can be slow for large matrix) or using the broadcasting:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x => \n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n",
+      "\n",
+      "v => \n",
+      "[ 1  0 -1]\n",
+      "\n",
+      "vv => \n",
+      "[[ 1  0 -1]\n",
+      " [ 1  0 -1]\n",
+      " [ 1  0 -1]\n",
+      " [ 1  0 -1]]\n",
+      "\n",
+      "y = x + vv = \n",
+      "[[ 2  2  2]\n",
+      " [ 5  5  5]\n",
+      " [ 8  8  8]\n",
+      " [11 11 11]]\n",
+      "\n",
+      "Outer Product: \n",
+      "[[ 4  5]\n",
+      " [ 8 10]\n",
+      " [12 15]]\n",
+      "\n",
+      "[[ 2  2  2]\n",
+      " [ 5  5  5]\n",
+      " [ 8  8  8]\n",
+      " [11 11 11]]\n",
+      "\n",
+      "[[ 5  6  7]\n",
+      " [ 9 10 11]]\n",
+      "\n",
+      "[41]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2,3], [4,5,6], [7,8,9], [10, 11, 12]])\n",
+    "v = np.array([1, 0, -1])\n",
+    "\n",
+    "print(\"x => \\n%s\\n\" % x)\n",
+    "print(\"v => \\n%s\\n\" % v)\n",
+    "\n",
+    "# stack 4 copies of v\n",
+    "vv = np.tile(v, (4, 1))\n",
+    "\n",
+    "print(\"vv => \\n%s\\n\" % vv)\n",
+    "\n",
+    "y = x + vv\n",
+    "\n",
+    "print(\"y = x + vv = \\n%s\\n\" % y)\n",
+    "\n",
+    "# Outer product\n",
+    "\n",
+    "v1 = np.array([1,2,3])  # v has shape (3,)\n",
+    "w = np.array([4,5])    # w has shape (2,)\n",
+    "\n",
+    "print(\"Outer Product: \\n%s\\n\" % (np.reshape(v1, (3, 1)) * w))\n",
+    "\n",
+    "# Sum of matrix plus a vector for each row\n",
+    "print(\"%s\\n\" % (x + v))\n",
+    "\n",
+    "h = np.array([[1,2,3],[4,5,6]])\n",
+    "# Sum of matrix plus a vector for each column\n",
+    "print(\"%s\\n\" % (h + np.reshape(w, (2,1))))\n",
+    "\n"
    ]
   }
  ],
