trained SVM, KNN and decision tree

--- a/EFC/EFC3/Computacional.ipynb
+++ b/EFC/EFC3/Computacional.ipynb
@@ -307,13 +307,7 @@
       "1000/1000 [==============================] - 0s 214us/sample - loss: 0.2910 - acc: 0.8780 - val_loss: 0.3274 - val_acc: 0.8630\n",
       "Epoch 112/400\n",
       "1000/1000 [==============================] - 0s 172us/sample - loss: 0.2911 - acc: 0.8820 - val_loss: 0.3281 - val_acc: 0.8630\n",
-      "Epoch 113/400\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 113/400\n",
       "1000/1000 [==============================] - 0s 192us/sample - loss: 0.2897 - acc: 0.8770 - val_loss: 0.3272 - val_acc: 0.8650\n",
       "Epoch 114/400\n",
       "1000/1000 [==============================] - 0s 123us/sample - loss: 0.2898 - acc: 0.8810 - val_loss: 0.3290 - val_acc: 0.8640\n",
@@ -1198,7 +1192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
